cluster/apps/nextcloud/nextcloud/nextcloud-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  ports:
    - name: nextcloud-db
      port: 3306
      protocol: TCP
  selector:
    app.kubernetes.io/instance: nextcloud-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nextcloud-db
  name: nextcloud-db
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nextcloud-db
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud-db
          image: mariadb:jammy
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: nextcloud-db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud-db-vol
      volumes:
        - name: nextcloud-db-vol
          persistentVolumeClaim:
            claimName: nextcloud-db-pvc
---
