cluster/apps/nextcloud/nextcloud/nextcloud-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  ports:
    - name: nextcloud-redis
      port: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/instance: nextcloud-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nextcloud-redis
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud-redis
          image: redis:7.2.5
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: nextcloud-redis-config
            items:
              - key: redis-config
                path: redis.conf
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
---
