cluster/apps/nextcloud/nextcloud/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: nextcloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nextcloud
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud
          image: nextcloud:27.1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-vol
      volumes:
        - name: nextcloud-vol
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`nextcloud.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: nextcloud-redirectregex
          namespace: networking
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: nextcloud
          namespace: nextcloud
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
